<resources>
    <string name="app_name">SICUTNG</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registrar">Registrar</string>
    <string name="acceder">Acceder</string>
    <string name="proveedor">Proveedor</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="google">Google</string>
    <string name="prefs_file">mx.tictac.sicutng.PREFERENCE_FILE_KEY</string>
    <string name="smart_lamp">Smart Lamp</string>
    <string name="status">STATUS</string>
    <string name="message">Message</string>
    <string name="notification">Notification</string>
    <string name="alert">Solicitar información</string>
    <string name="alert_title">Solicita atención</string>
    <string name="on1">ON</string>
    <string name="default_notification_channel_id">store_worker</string>
    <string name="fcm_message">Attention Request</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_message">Enter message</string>
    <string name="enter_token">Enter Token</string>
    <string name="send">Enviar Notificación</string>
    <string name="all">TODO</string>
    <string name="title_temperature">Temperatura en la tienda</string>
    <string name="subtitle_temperature">SICUTNG Sensors</string>
    <string name="title_humidity">Humedad en la tienda</string>
    <string name="subtitle_humidity">SICUTNG Sensors</string>
    <string name="value_temperature">Temperatura: 24.5 C°</string>
    <string name="value_humidity">Humedad: 40%</string>
    <string name="sensors">Sensors</string>
    <string name="welcome">Te damos la bienvienida:</string>
    <string name="auth_title">Acceso a SIC UTNG</string>
    <string name="control">Control de Tienda</string>
    <string name="request">Solicitada</string>
    <string name="attend">Atendida</string>
</resources>