<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:text="@string/email"
        android:textColor="#BBDEFB"
        app:layout_constraintEnd_toStartOf="@+id/logOutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/proveedorTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="@string/proveedor"
        android:textColor="#BBDEFB"
        app:layout_constraintEnd_toStartOf="@+id/logOutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView" />

    <Button
        android:id="@+id/logOutButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/sign_out"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/requestAttentionButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        android:text="@string/alert"
        android:textColor="#EA80FC"
        android:textSize="20sp"
        app:icon="@drawable/ic_baseline_emoji_people_24"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proveedorTextView"

        />

    <Button
        android:id="@+id/notificationTestButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/design_default_color_on_secondary"
        android:text="@string/send"
        android:textSize="20sp"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/notificacion"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:textColor="#EA80FC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requestAttentionButton" />

    <Button
        android:id="@+id/sensorsButton"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/fui_bgGitHub"
        android:text="@string/sensors"
        android:textSize="20sp"
        style="@style/Widget.Material3.Button.Icon"
        app:icon="@drawable/sensors"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        android:textColor="@color/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationTestButton" />

    <Button
        android:id="@+id/controlButton"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/control"
        android:textColor="#283593"
        android:textSize="20sp"
        app:icon="@drawable/light_bulb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorsButton"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome"
        android:textColor="#CFD8DC"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/logOutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>