<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertActivity"
    android:background="@color/purple_200"
    >

    <TextView
        android:id="@+id/statusDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusLabel" />

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alert_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#311B92"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/status"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#311B92"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <Button
        style="@style/Widget.Material3.Button.Icon"
        android:id="@+id/notifyButton"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/request"
        android:textSize="48sp"
        app:iconTint="@color/white"
        app:icon="@drawable/notificacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusDisplay" />


    <Button
        style="@style/Widget.Material3.Button.Icon"
        android:id="@+id/messButton"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/fui_bgFacebook"
        app:icon="@android:drawable/ic_menu_edit"
        android:text="@string/attend"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notifyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>